--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.application.name=demo
-source.folder=c:/misc/cpas-test/22052025/12N
-destination.folder=c:/misc/cpas-test/22052025/12N/pretty
+transform.source.folder=c:/misc/cpas-test/27062025/32R
+transform.destination.folder=c:/misc/cpas-test/27062025/32R/pretty
 web.service.url=http://localhost:8080/utils/prettify
+upload.source.folder=c:/misc/cpas-test/27062025/32R/pretty
+upload.filename.suffix=json
+
+
 spring.main.web-application-type=none
 
 spring.rabbitmq.host=localhost
@@ -12,6 +16,10 @@ spring.rabbitmq.listener.simple.auto-startup=false
 spring.rabbitmq.listener.direct.auto-startup=false
 
 rabbitmq.queue=message.queue
+
+# NOTE - you must change these to match the files / messages you are uploading
 metadata.sourceSystem=CPAS
 metadata.destinationAddress=https://poc.example.com/api
 metadata.messageRenderTechnology=JSON
+#metadata.formatURL=http://localhost:8080/utils/prettifyMessage
+metadata.formatURL=
