--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,4 @@ systemProp.http.proxyHost=GB3WSA-Intvip.corp.internal
 systemProp.http.proxyPort=9480
 systemProp.https.proxyHost=GB3WSA-Intvip.corp.internal
 systemProp.https.proxyPort=9480
-org.gradle.java.home=c:/Java/jdk/jdk-17.0.8
+org.gradle.java.home=c:/java/jdk/17.0.12
